Adds `VolumeService` to server
