# api/services/volumes/v1/volumes.swagger.json
@@ -1,12 +1,12 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "services/nodes/v1/nodes.proto",
+    "title": "services/volumes/v1/volumes.proto",
     "version": "version not set"
   },
   "tags": [
     {
-      "name": "NodeService"
+      "name": "VolumeService"
     }
   ],
   "consumes": [
@@ -16,14 +16,14 @@
     "application/json"
   ],
   "paths": {
-    "/api/v1/nodes": {
+    "/api/v1/volumes": {
       "get": {
-        "operationId": "NodeService_List",
+        "operationId": "VolumeService_List",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/servicesnodesv1ListResponse"
+              "$ref": "#/definitions/servicesvolumesv1ListResponse"
             }
           },
           "default": {
@@ -43,16 +43,16 @@
           }
         ],
         "tags": [
-          "NodeService"
+          "VolumeService"
         ]
       },
       "post": {
-        "operationId": "NodeService_Create",
+        "operationId": "VolumeService_Create",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/servicesnodesv1CreateResponse"
+              "$ref": "#/definitions/servicesvolumesv1CreateResponse"
             }
           },
           "default": {
@@ -64,27 +64,27 @@
         },
         "parameters": [
           {
-            "name": "node",
+            "name": "volume",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/v1Node"
+              "$ref": "#/definitions/v1Volume"
             }
           }
         ],
         "tags": [
-          "NodeService"
+          "VolumeService"
         ]
       }
     },
-    "/api/v1/nodes/{id}": {
+    "/api/v1/volumes/{id}": {
       "get": {
-        "operationId": "NodeService_Get",
+        "operationId": "VolumeService_Get",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/servicesnodesv1GetResponse"
+              "$ref": "#/definitions/servicesvolumesv1GetResponse"
             }
           },
           "default": {
@@ -103,16 +103,16 @@
           }
         ],
         "tags": [
-          "NodeService"
+          "VolumeService"
         ]
       },
       "delete": {
-        "operationId": "NodeService_Delete",
+        "operationId": "VolumeService_Delete",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/servicesnodesv1DeleteResponse"
+              "$ref": "#/definitions/servicesvolumesv1DeleteResponse"
             }
           },
           "default": {
@@ -131,13 +131,13 @@
           }
         ],
         "tags": [
-          "NodeService"
+          "VolumeService"
         ]
       }
     },
-    "/api/v1/nodes/{id}/status": {
+    "/api/v1/volumes/{id}/status": {
       "put": {
-        "operationId": "NodeService_UpdateStatus",
+        "operationId": "VolumeService_UpdateStatus",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -170,34 +170,16 @@
             "in": "query",
             "required": false,
             "type": "string"
-          },
-          {
-            "name": "status.ip.dns",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "status.hostname",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "status.runtime",
-            "in": "query",
-            "required": false,
-            "type": "string"
           }
         ],
         "tags": [
-          "NodeService"
+          "VolumeService"
         ]
       }
     },
-    "/api/v1/nodes/{node.meta.name}": {
+    "/api/v1/volumes/{volume.meta.name}": {
       "put": {
-        "operationId": "NodeService_Update",
+        "operationId": "VolumeService_Update",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -214,13 +196,13 @@
         },
         "parameters": [
           {
-            "name": "node.meta.name",
+            "name": "volume.meta.name",
             "in": "path",
             "required": true,
             "type": "string"
           },
           {
-            "name": "node",
+            "name": "volume",
             "in": "body",
             "required": true,
             "schema": {
@@ -250,7 +232,7 @@
                   }
                 },
                 "status": {
-                  "$ref": "#/definitions/nodesv1Status"
+                  "$ref": "#/definitions/volumesv1Status"
                 }
               }
             }
@@ -269,16 +251,16 @@
           }
         ],
         "tags": [
-          "NodeService"
+          "VolumeService"
         ]
       },
       "patch": {
-        "operationId": "NodeService_Update2",
+        "operationId": "VolumeService_Patch",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1UpdateResponse"
+              "$ref": "#/definitions/v1PatchResponse"
             }
           },
           "default": {
@@ -290,13 +272,13 @@
         },
         "parameters": [
           {
-            "name": "node.meta.name",
+            "name": "volume.meta.name",
             "in": "path",
             "required": true,
             "type": "string"
           },
           {
-            "name": "node",
+            "name": "volume",
             "in": "body",
             "required": true,
             "schema": {
@@ -326,7 +308,7 @@
                   }
                 },
                 "status": {
-                  "$ref": "#/definitions/nodesv1Status"
+                  "$ref": "#/definitions/volumesv1Status"
                 }
               }
             }
@@ -339,24 +321,12 @@
           }
         ],
         "tags": [
-          "NodeService"
+          "VolumeService"
         ]
       }
     }
   },
   "definitions": {
-    "eventsv1Operation": {
-      "type": "string",
-      "enum": [
-        "Create",
-        "Update",
-        "Delete",
-        "Get",
-        "List",
-        "Watch"
-      ],
-      "default": "Create"
-    },
     "googlerpcStatus": {
       "type": "object",
       "properties": {
@@ -376,23 +346,6 @@
         }
       }
     },
-    "nodesv1Status": {
-      "type": "object",
-      "properties": {
-        "phase": {
-          "type": "string"
-        },
-        "ip": {
-          "$ref": "#/definitions/v1IPStatus"
-        },
-        "hostname": {
-          "type": "string"
-        },
-        "runtime": {
-          "type": "string"
-        }
-      }
-    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -404,15 +357,15 @@
       "additionalProperties": {},
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
-    "servicesnodesv1CreateResponse": {
+    "servicesvolumesv1CreateResponse": {
       "type": "object",
       "properties": {
-        "node": {
-          "$ref": "#/definitions/v1Node"
+        "volume": {
+          "$ref": "#/definitions/v1Volume"
         }
       }
     },
-    "servicesnodesv1DeleteResponse": {
+    "servicesvolumesv1DeleteResponse": {
       "type": "object",
       "properties": {
         "id": {
@@ -420,150 +373,23 @@
         }
       }
     },
-    "servicesnodesv1GetResponse": {
+    "servicesvolumesv1GetResponse": {
       "type": "object",
       "properties": {
-        "node": {
-          "$ref": "#/definitions/v1Node"
+        "volume": {
+          "$ref": "#/definitions/v1Volume"
         }
       }
     },
-    "servicesnodesv1ListResponse": {
+    "servicesvolumesv1ListResponse": {
       "type": "object",
       "properties": {
-        "nodes": {
+        "volumes": {
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/v1Node"
+            "$ref": "#/definitions/v1Volume"
           }
-        }
-      }
-    },
-    "v1Event": {
-      "type": "object",
-      "properties": {
-        "meta": {
-          "$ref": "#/definitions/v1Meta"
-        },
-        "objectId": {
-          "type": "string"
-        },
-        "clientId": {
-          "type": "string"
-        },
-        "type": {
-          "$ref": "#/definitions/v1EventType"
-        },
-        "operation": {
-          "$ref": "#/definitions/eventsv1Operation"
-        },
-        "object": {
-          "$ref": "#/definitions/protobufAny"
-        }
-      }
-    },
-    "v1EventType": {
-      "type": "string",
-      "enum": [
-        "ContainerCreate",
-        "ContainerDelete",
-        "ContainerUpdate",
-        "ContainerPatch",
-        "ContainerStart",
-        "ContainerGet",
-        "ContainerList",
-        "ContainerKill",
-        "ContainerStop",
-        "NodeGet",
-        "NodeCreate",
-        "NodeDelete",
-        "NodeList",
-        "NodeUpdate",
-        "NodeJoin",
-        "NodeForget",
-        "NodeConnect",
-        "ContainerSetCreate",
-        "ContainerSetDelete",
-        "ContainerSetUpdate",
-        "Schedule",
-        "TailLogsStart",
-        "TailLogsStop",
-        "VolumeCreate",
-        "VolumeDelete",
-        "VolumeUpdate",
-        "VolumePatch",
-        "VolumeGet",
-        "VolumeList"
-      ],
-      "default": "ContainerCreate"
-    },
-    "v1ForgetResponse": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
-        }
-      }
-    },
-    "v1IPLinkStatus": {
-      "type": "object",
-      "properties": {
-        "link": {
-          "type": "string"
-        },
-        "state": {
-          "type": "string"
-        },
-        "mac": {
-          "type": "string"
-        }
-      }
-    },
-    "v1IPStatus": {
-      "type": "object",
-      "properties": {
-        "links": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1IPLinkStatus"
-          }
-        },
-        "addresses": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1IPV4Status"
-          }
-        },
-        "dns": {
-          "type": "string"
-        }
-      }
-    },
-    "v1IPV4Status": {
-      "type": "object",
-      "properties": {
-        "address": {
-          "type": "string"
-        },
-        "netmask": {
-          "type": "string"
-        },
-        "gateway": {
-          "type": "string"
-        },
-        "interface": {
-          "type": "string"
-        }
-      }
-    },
-    "v1JoinResponse": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string"
         }
       }
     },
@@ -593,22 +419,19 @@
         }
       }
     },
-    "v1Node": {
+    "v1PatchResponse": {
       "type": "object",
       "properties": {
-        "meta": {
-          "$ref": "#/definitions/v1Meta"
-        },
-        "status": {
-          "$ref": "#/definitions/nodesv1Status"
+        "volume": {
+          "$ref": "#/definitions/v1Volume"
         }
       }
     },
     "v1UpdateResponse": {
       "type": "object",
       "properties": {
-        "node": {
-          "$ref": "#/definitions/v1Node"
+        "volume": {
+          "$ref": "#/definitions/v1Volume"
         }
       }
     },
@@ -616,6 +439,25 @@
       "type": "object",
       "properties": {
         "id": {
+          "type": "string"
+        }
+      }
+    },
+    "v1Volume": {
+      "type": "object",
+      "properties": {
+        "meta": {
+          "$ref": "#/definitions/v1Meta"
+        },
+        "status": {
+          "$ref": "#/definitions/volumesv1Status"
+        }
+      }
+    },
+    "volumesv1Status": {
+      "type": "object",
+      "properties": {
+        "phase": {
           "type": "string"
         }
       }
